# flit

./: .bumpversion.cfg  .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .ruff.toml  .travis.yml  README.rst  SConstruct  SECURITY.md  appveyor.yml  bootstrap_dev.py  flit-pkg.ini  flit.ini  flit.toml  noxfile.py  prepare_license_list.py  pyproject.toml  requirements-test.txt  tox.ini
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: lint.yml  packages-requirements.in  packages-requirements.txt  test.yml
doc/: Makefile  bootstrap.rst  cmdline.rst  conf.py  development.rst  entrypoints.rst  flit_ini.rst  history.rst  index.rst  make.bat  packages.rst  pkg_ini.rst  pypi_ini.rst  pyproject_toml.rst  rationale.rst  reproducible.rst  requirements.txt  testpypi.rst  upload.rst
flit/: __init__.py  __main__.py  _get_dirs.py  build.py  buildapi.py  common.py  config.py  errors.py  gensetup.py  info.py  inifile.py  init.py  install.py  installfrom.py  log.py  logo.py  make_sdist.py  pypi.ini  sdist.py  sdist_rules.py  subcmds.py  tomlify.py  upload.py  validate.py  wheel.py
flit/license_templates/: mit
flit/subcommand/: __init__.py  build.py  info.py  init.py  install.py  installfrom.py  publish.py
flit/vcs/: __init__.py  fsl.py  git.py  hg.py
flit/vendorized/readme/: clean.py  rst.py
flit_core/: README.rst  bootstrap.py  bootstrap_install.py  build_dists.py  install_bootstrap.py  pyproject.toml  update-vendored-packaging.sh  update-vendored-tomli.sh
flit_core/flit_core/: __init__.py  _spdx_data.py  build_thyself.py  buildapi.py  common.py  config.py  inifile.py  sdist.py  versionno.py  wheel.py
flit_core/flit_core/_vendor/: vendor.txt
flit_core/flit_core/_vendor/tomli/: __init__.py  _parser.py  _re.py
flit_core/flit_core/tests/: test_build_thyself.py  test_buildapi.py  test_common.py  test_config.py  test_inifile.py  test_sdist.py  test_wheel.py
flit_core/flit_core/tests/samples/: console_entry_points.txt  invalid_classifier.ini  module2.py  some_entry_points.txt
flit_core/flit_core/tests/samples/constructed_version/: cannot_set_version.py  module2.py
flit_core/flit_core/tests/samples/imported_version/package1/: __init__.py
flit_core/flit_core/tests/samples/namespace_package/: README.rst  pyproject.toml
flit_core/flit_core/tests/samples/normalization/: pyproject.toml
flit_core/flit_core/tests/samples/ns1-pkg/: ns1-pkg.toml
flit_core/flit_core/tests/samples/pep517/: pyproject.toml
flit_core/flit_core/tests/samples/pep621/: pyproject.toml
flit_core/flit_core/tests/samples/pep621_nodynamic/: pyproject.toml
flit_core/tests_core/: test_build_thyself.py  test_buildapi.py  test_common.py  test_config.py  test_sdist.py  test_versionno.py  test_wheel.py
flit_core/tests_core/samples/: bad-description-ext.toml  extras-newstyle.toml  extras.toml  missing-description-file.toml  misspelled-key.toml  module1-old-metadata.toml  module1-pkg.toml  no_docstring-pkg.toml  package1.toml  requires-envmark.toml  requires-extra-envmark.toml  requires-requests.toml
flit_core/tests_core/samples/annotated_version/: module1.py  pyproject.toml
flit_core/tests_core/samples/conflicting_modules/: pyproject.toml
flit_core/tests_core/samples/imported_version/package1/: __init__.py
flit_core/tests_core/samples/inclusion/: pyproject.toml
flit_core/tests_core/samples/license_in_src/: pyproject.toml
flit_core/tests_core/samples/pep517/: pyproject.toml
flit_core/tests_core/samples/pep621/: pyproject.toml
flit_core/tests_core/samples/pep621_license_files/: pyproject.toml
tests/: conftest.py  test_build.py  test_buildapi.py  test_cli.py  test_command.py  test_common.py  test_config.py  test_find_python_executable.py  test_importable.py  test_inifile.py  test_init.py  test_install.py  test_installfrom.py  test_metadata.py  test_sdist.py  test_tomlify.py  test_upload.py  test_validate.py  test_vcs.py  test_wheel.py
tests/samples/: altdistname.ini  classifiers_with_space.ini  dev_requires_with_empty_lines.ini  entrypoints_missing.ini  entrypoints_valid.ini  extras-dev-conflict.toml  extras.toml  invalid_classifier.toml  invalid_version1.py  missing-description-file.toml  missing-module.toml  misspelled-key.ini  module1-pkg.ini  module1-pkg.toml  module1.py  module2.py  module3-pkg.toml  module3.py  no_docstring-pkg.toml  ns2-pkg.toml  only-deps.toml  package1-pkg.ini  requires-requests.toml  requires_with_empty_lines.ini
tests/samples/altdistname/: pyproject.toml
tests/samples/entrypoints_conflict/: console_entry_points.txt  flit.ini  pyproject.toml
tests/samples/entrypoints_valid/: pyproject.toml
tests/samples/extras/: pyproject.toml
tests/samples/module1_toml/: pyproject.toml
tests/samples/module3/: flit.ini  pyproject.toml
tests/samples/module4_licenses_dir/: flit.ini
tests/samples/module4_licenses_dir/LICENSES/: dummy.txt
tests/samples/modulewithlocalversion/: modulewithlocalversion.py  pyproject.toml
tests/samples/ns1-pkg/: pyproject.toml
tests/samples/ns1-pkg-mod/: pyproject.toml
tests/samples/ns1-pkg-mod/ns1/: module.py
tests/samples/ns1-pkg/ns1/pkg/: __init__.py
tests/samples/ns1-pkg2/: ns1-pkg2.toml  pyproject.toml
tests/samples/ns1-pkg2/ns1/pkg2/: __init__.py
tests/samples/ns2/: __init__.py
tests/samples/package1/: __init__.py  flit.ini  pyproject.toml
tests/samples/package2/: __init__.py  package2-pkg.ini  pyproject.toml
tests/samples/package3/: __init__.py
tests/samples/package4/: __init__.py
tests/samples/package5/: __init__.py
tests/samples/packageinsrc/: pyproject.toml
tests/samples/packageunicode/: pyproject.toml
tests/samples/packageunicode/packageunicode/: __init__.py
tests/samples/pep517/: pyproject.toml
tests/samples/requires-external/: pyproject.toml
tests/samples/requires-extra-envmark/: pyproject.toml
tests/samples/sample-stubs/: pyproject.toml
tests/samples/sample-stubs/src/wcwidth-stubs/: __init__.pyi
tests/samples/with_flit_ini/: some_entry_points.txt
