[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "flit"
authors = [
    {name = "Thomas Kluyver", email = "thomas@kluyver.me.uk"},
]
dependencies = [
    "flit_core >=3.12.0",
    "requests",
    "docutils",
    "tomli-w",
    "pip",
]
requires-python = ">=3.8"
readme = "README.rst"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
classifiers = ["Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ['version', 'description']

[project.optional-dependencies]
test = [
	"testpath",
	"responses",
	"pytest>=2.7.3",
	"pytest-cov",
	"tomli",
]
doc = [
	"sphinx",
	"sphinxcontrib_github_alt",
	"pygments-github-lexers",  # TOML highlighting
]

[project.urls]
Documentation = "https://flit.pypa.io"
Source = "https://github.com/pypa/flit"
Changelog = "https://flit.pypa.io/en/stable/history.html"

[project.scripts]
flit = "flit:main"

[tool.flit.sdist]  # Generated with python -m flit.sdist_rules
include = [
    ".bumpversion.cfg",
    ".coveragerc",
    ".github/",
    ".gitignore",
    ".pre-commit-config.yaml",
    ".readthedocs.yml",
    "bootstrap_dev.py",
    "codecov.yml",
    "doc/",
    "flit_core/",
    "prepare_license_list.py",
    "SECURITY.md",
    "tests/",
    "tox.ini",
]
exclude = [
    "doc/_build/",
    "flit_core/.pytest_cache/",
    "flit_core/dist/",
]
