[build-system]
requires = []
build-backend = "flit_core.buildapi"
backend-path = ["."]

[project]
name="flit_core"
authors=[
    {name = "Thomas Kluyver & contributors", email = "thomas@kluyver.me.uk"},
]
description = "Distribution-building parts of Flit. See flit package for more information"
dependencies = []
requires-python = '>=3.6'
readme = "README.rst"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://flit.pypa.io"
Source = "https://github.com/pypa/flit"

[tool.flit.sdist]
include = [
    "bootstrap_install.py",
    "build_dists.py",
    "tests_core/",
]
