[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "package1"
author = "Sir Robin"
author-email = "robin@camelot.uk"
home-page = "http://github.com/sirrobin/package1"

# The sections below conflict
[tool.flit.scripts]
pkg_script = "package1:main"

[tool.flit.entrypoints.console_scripts]
foo = "bar:baz"
