[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "package1"
authors = [
    {name = "Sir Robin", email = "robin@camelot.uk"}
]
dynamic = ["version", "description"]

[project.scripts]
pkg_script = "package1:main"

[project.entry-points.myplugins]
package1 = "package1:main"
