[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "package2"
authors = [
    {name = "Sir Robin", email = "robin@camelot.uk"}
]
dynamic = ["version", "description"]

[project.urls]
home = "http://github.com/sirrobin/package2"


[project.scripts]
pkg_script = "package2:main"
