[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "module1"
author = "Sir Robin"
author-email = "robin@camelot.uk"
home-page = "http://github.com/sirrobin/module1"
description-file = "README.rst"
requires = [
    "requests >= 2.18",
    "docutils",
]

[tool.flit.entrypoints.flit_test_example]
foo = "module1:main"
